1.2.3i2:
    Core:
    * New option -B for just generating the configuration
    
    Checks & Agents:
    * lnx_if: Fixed crash on missing "Address" field

1.2.3i1:
    Core:
    * Agents can send data for other hosts "piggyback". This is being
      used by the vSphere and SAP plugins
    * New variable host_check_commands, that allows the definition of
      an alternative host check command (without manually defining one)
    * New variable snmp_check_interval which can be used to customize
      the check intervals of SNMP based checks
    * setup: Added missing vars rrd_path and rrdcached_sock
    * new variable check_mk_exit_status: allows to make Check_MK service OK,
      even if host in not reachable.
    * set always_cleanup_autochecks to True per default now
    * check_mk: new option --snmptranslate

    Multisite:
    * New availability view for arbitrary host/service collections
    * New option auth_by_http_header to use the value of a HTTP header
      variable for authentication (Useful in reverse proxy environments)
    * New permission that is needed for seeing views that other users
      have defined (per default this is contained in all roles)
    * New path back to the view after command exection with all
      checkboxes cleared
    * Added plugins to config module to make registration of default values
      possible for addons like mkeventd - reset to default values works now
      correctly even for multisite related settings
    * perfometer: Bit values now using base of 1000
    * Added PNP tempate for check_disk_smb
    * Dashboards can now be configured to be reloaded on resizing
      (automatically adds width/height url parameters)
    * LDAP authentification: New config option "Do not use persistent
                             connections to ldap server"
    * Hosttags and auxiliary tags can now be grouped in topics
    * Fixed output of time in view if server time differs from user time

    Event Console: